2012-01-04  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	ComboBoxText: Constructor: Add a TODO comment.

	* gtk/src/comboboxtext.ccg: Add a comment that entry-text-column and id-column
	are set properly in new GTK+ versions. Bug #653579

2011-12-24  Hub Figuière  <hub@figuiere.net>

	Implement Gtk::IconView::IconView(Gtk::CellArea). Bug #665361

	* tools/m4/convert_gtk.m4:
	m4 macro for CellArea
	* gtk/src/cellareabox.hg:
	Wrap the create function for Gtk::CellAreaBox.
	* gtk/src/iconview.hg:
	Construct with a CellArea.

2011-12-01  Hub Figuière  <hub@figuiere.net>

	Add missing Gtk::Settings properties. Bug #665264

	* gtk/src/settings.hg: Added properties
	"gtk-application-prefer-dark-theme",
	"gtk-auto-mnemonics" and "gtk-visible-focus"


2011-11-30  Hub Figuière  <hub@figuiere.net>

	Fix configure.ac that had a broken shell syntax.

	* configure.ac: fix shell syntax.
	Bug #665267

2011-11-28  John Ralls <jralls@ceridwen.us>

	Fix the build for Quartz (MacOS)
    
	* configure.ac: Read the gtk+-3.0 target variable and
	use the result to set appropriate automake conditionals (in theory, a
	particular Gtk+-3 library can contain multiple backends, though this
	isn't strictly true in practice).
	Also makes the check for HOST_WINDOWS_NATIVE conditional on having a 
	Win32 backend.
	* gtk/src/filelist.am: Add a new target gtkmm_files_x11_hg, including
	plug.hg and socket.hg in it. It's added to gtkmm_files_arch_hg only if
	there's an X11 backend to build them against.
	Bug #662975

2011-09-26 Murray Cumming <murrayc@murrayc.com>

	Add back Application, though it is not ready yet.

	* gtk/src/application.[hg|ccg]: Added.
	* gio/src/window.hg:
	* gio/src/filelist.am:
	* goi/giomm.h: Mention it.
	See bug #637445#c29

2011-11-18  Murray Cumming  <murrayc@murrayc.com>

	Gtk::Widget: Deprecate get_pointer().

	* gtk/src/widget.hg: And fix the build with the latest GTK+.

2011-11-16  Hub Figuière  <hub@figuiere.net>

 	Fix namespacing for Cairo (Closes: #663303)
