@@ -32,6 +32,11 @@ _CONFIGINCLUDE(gtkmmconfig.h)
 _DEFS(gtkmm,gtk)
 _PINCLUDE(gtkmm/private/widget_p.h)
 
+#m4 _PUSH(SECTION_CC_PRE_INCLUDES)
+#undef GTK_DISABLE_DEPRECATED
+#define GDK_DISABLE_DEPRECATION_WARNINGS 1
+#m4 _POP()
+
 namespace Gtk
 {
 
@@ -90,7 +95,7 @@ public:
   _WRAP_METHOD(TreeModel::Path get_displayed_row() const, gtk_cell_view_get_displayed_row)
   _IGNORE(gtk_cell_view_get_size_of_row) //deprecated
 
-  _WRAP_METHOD(void set_background_color(const Gdk::Color& color), gtk_cell_view_set_background_color)
+  _WRAP_METHOD(void set_background_color(const Gdk::Color& color), gtk_cell_view_set_background_color, deprecated "Use set_background_rgba instead.")
   _WRAP_METHOD(void set_background_rgba(const Gdk::RGBA& rgba), gtk_cell_view_set_background_rgba)
   
   _WRAP_METHOD(bool get_draw_sensitive() const, gtk_cell_view_get_draw_sensitive)
@@ -101,7 +106,7 @@ public:
   _IGNORE(gtk_cell_view_get_cell_renderers) //deprecated
 
   _WRAP_PROPERTY("background", Glib::ustring)
-  _WRAP_PROPERTY("background-gdk", Gdk::Color)
+  _WRAP_PROPERTY("background-gdk", Gdk::Color) //TODO: Deprecate this.
   _WRAP_PROPERTY("background-rgba", Gdk::RGBA)
   _WRAP_PROPERTY("background-set", bool)
   _WRAP_PROPERTY("model", Glib::RefPtr<TreeModel>)
