@@ -26,12 +26,16 @@
 namespace Gtk
 {
 
+#ifndef GTKMM_DISABLE_DEPRECATED
+
 Gdk::Color ColorButton::get_color() const
 {
   Gdk::Color color;
   gtk_color_button_get_color(const_cast<GtkColorButton*>(gobj()), color.gobj());
   return color;
 }
+
+#endif //GTKMM_DISABLE_DEPRECATED
 
 Gdk::RGBA ColorButton::get_rgba() const
 {
