@@ -25,6 +25,10 @@
 _DEFS(gtkmm,gtk)
 _PINCLUDE(gtkmm/private/button_p.h)
 
+#m4 _PUSH(SECTION_CC_PRE_INCLUDES)
+#undef GTK_DISABLE_DEPRECATED
+#define GDK_DISABLE_DEPRECATION_WARNINGS 1
+#m4 _POP()
 
 namespace Gtk
 {
@@ -85,6 +89,8 @@ public:
   _WRAP_METHOD(void set_alpha(guint16 alpha), gtk_color_button_set_alpha)
   _WRAP_METHOD(void set_rgba(const Gdk::RGBA& color), gtk_color_button_set_rgba)
 
+#ifndef GTKMM_DISABLE_DEPRECATED
+
   /** Returns a copy of the the current color.
    *
    * Changes to the return value will have no effect on the Gtk::ColorButton.
@@ -92,9 +98,12 @@ public:
    * @return A Gdk::Color representing the current internal color of the Gtk::ColorButton.
    *
    * @newin{2,4}
+   * @deprecated Use get_rgba() instead.
    */
   Gdk::Color get_color() const;
   _IGNORE(gtk_color_button_get_color)
+
+#endif //GTKMM_DISABLE_DEPRECATED
 
   /** Returns a copy of the the current color.
    *
@@ -115,7 +124,7 @@ public:
 
   _WRAP_PROPERTY("use-alpha", bool)
   _WRAP_PROPERTY("title", Glib::ustring)
-  _WRAP_PROPERTY("color", Gdk::Color)
+  _WRAP_PROPERTY("color", Gdk::Color) //TODO: Deprecated
   _WRAP_PROPERTY("rgba", Gdk::RGBA)
   _WRAP_PROPERTY("alpha", guint16) //Todo: Remove thsi when we remove the "color" property too.
 
