@@ -21,6 +21,11 @@ _DEFS(gtkmm,gtk)
 _PINCLUDE(gtkmm/private/hvbox_p.h)
 _PINCLUDE(gtkmm/private/dialog_p.h)
 
+#m4 _PUSH(SECTION_CC_PRE_INCLUDES)
+#undef GTK_DISABLE_DEPRECATED
+#define GDK_DISABLE_DEPRECATION_WARNINGS 1
+#m4 _POP()
+
 #include <vector>
 
 #include <gtkmm/box.h>
@@ -53,7 +58,7 @@ public:
   _WRAP_METHOD(void set_has_opacity_control(bool has_opacity = true), gtk_color_selection_set_has_opacity_control)
   _WRAP_METHOD(bool get_has_palette() const, gtk_color_selection_get_has_palette)
   _WRAP_METHOD(void set_has_palette(bool has_palette = true), gtk_color_selection_set_has_palette)
-  _WRAP_METHOD(void set_current_color(const Gdk::Color& color), gtk_color_selection_set_current_color)
+  _WRAP_METHOD(void set_current_color(const Gdk::Color& color), gtk_color_selection_set_current_color, deprecated "Use set_current_rgba() instead.")
   _WRAP_METHOD(void set_current_alpha(guint16 alpha), gtk_color_selection_set_current_alpha)
   Gdk::Color get_current_color() const;
   _WRAP_METHOD(guint16 get_current_alpha() const, gtk_color_selection_get_current_alpha)
