@@ -1,3 +1,15 @@
+2012-01-05  Murray Cumming  <murrayc@murrayc.com>
+
+	Deprecate some methods using Gdk::Color, to fix the build.
+
+	* gdk/gdkmm/general.[h|cc]: Deprecate set_source_color().
+	* gtk/src/cellview.hg: Deprecate set_background_color().
+	* gtk/src/colorbutton.[hg|ccg]: Deprecate get_color().
+	* gtk/src/colorselection.hg: Deprecate set_current_color().
+
+	And add #defines to let us continue to use the deprecated C API in 
+	our deprecated C++ API implementation.
+
 2012-01-04  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>
 
 	ComboBoxText: Constructor: Add a TODO comment.
